# ai_agent

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
docs/: 7-day-learning-plan.md  demo-script.md  interview-qa.md
docs/superpowers/specs/: 2026-07-15-drivetest-agent-design.md
examples/: cases.json
knowledge/: aeb-input-constraints.md  boundary-exception-testing.md  integration-regression-checklist.md  pytest-naming-assertions.md
src/drivetest_agent/: __init__.py  config.py
src/drivetest_agent/agent/: __init__.py  orchestrator.py
src/drivetest_agent/domain/: __init__.py  aeb.py  models.py
src/drivetest_agent/llm/: __init__.py  exceptions.py  fake_client.py  openai_client.py  prompts.py  protocol.py
src/drivetest_agent/reporting/: __init__.py  report_builder.py
src/drivetest_agent/retrieval/: __init__.py  chunking.py  retriever.py
src/drivetest_agent/tools/: __init__.py  pytest_runner.py
src/drivetest_agent/ui/: __init__.py  examples.py  page.py  paths.py  render.py  service.py  view_model.py
tests/: test_config.py
tests/agent/: conftest.py  test_orchestrator.py
tests/domain/: test_aeb.py  test_models.py
tests/llm/: conftest.py  test_fake_client.py  test_openai_client.py  test_prompts.py
tests/reporting/: test_report_builder.py
tests/retrieval/: conftest.py  test_chunking.py  test_retriever.py
tests/tools/: test_pytest_runner.py
tests/ui/: conftest.py  test_app_smoke.py  test_examples.py  test_paths.py  test_service.py  test_view_model.py
